--- a/infra/Dockerfile
+++ b/infra/Dockerfile
@@ -2,10 +2,10 @@ FROM node:12
 
 WORKDIR /app
 
-COPY package*.json ./app
+COPY package*.json ./app/
 
 RUN npm install
 
-COPY ../src ./src
+COPY ../src ./src/
 
 CMD ["npm", "start"]
