--- a/.github/workflows/deploy-master.yaml
+++ b/.github/workflows/deploy-master.yaml
@@ -21,10 +21,10 @@ jobs:
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
     - name: Push image
       run: docker push duytronguit/k8sdemo
-    # - uses: digitalocean/action-doctl@v2
-    #   with:
-    #     token: ${{ secrets.DO_Personal_Access_Token }}
-    # - name: Get DO cluster
-    #   run: doctl kubernetes cluster kubeconfig save k8s-demo
-    # - name: Get Source
-    #   run: kubectl rollout restart deployment app-be
+    - uses: digitalocean/action-doctl@v2
+      with:
+        token: ${{ secrets.DO_PAT }}
+    - name: Get Cloud (digital-ocean) cluster
+      run: doctl kubernetes cluster kubeconfig save k8s
+    - name: Get Source
+      run: kubectl rollout restart deployment app-be
